# py_web_hw-11

./: .gitignore  main.py  pyproject.toml
database/: db.py  models.py
migrations/: env.py
migrations/versions/: e4b3c94c71c3_init.py
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  notes.py  users.py
schemas/: schemas.py
services/: auth.py  email.py
