[tool.poetry]
name = "py-web-hw-11"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
